@@ -26,17 +26,16 @@ import com.facebook.buck.cxx.toolchain.linker.Linker;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.model.BuildTarget;
 import com.facebook.buck.model.BuildTargetFactory;
-import com.facebook.buck.rules.BuildRuleParams;
 import com.facebook.buck.rules.DefaultSourcePathResolver;
 import com.facebook.buck.rules.DefaultTargetNodeToBuildRuleTransformer;
 import com.facebook.buck.rules.FakeSourcePath;
 import com.facebook.buck.rules.HashedFileTool;
+import com.facebook.buck.rules.PathSourcePath;
 import com.facebook.buck.rules.RuleKey;
 import com.facebook.buck.rules.SingleThreadedBuildRuleResolver;
 import com.facebook.buck.rules.SourcePathResolver;
 import com.facebook.buck.rules.SourcePathRuleFinder;
 import com.facebook.buck.rules.TargetGraph;
-import com.facebook.buck.rules.TestBuildRuleParams;
 import com.facebook.buck.rules.args.Arg;
 import com.facebook.buck.rules.args.SanitizedArg;
 import com.facebook.buck.rules.args.SourcePathArg;
@@ -49,6 +48,7 @@ import com.google.common.base.Strings;
 import com.google.common.collect.ImmutableBiMap;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableSortedSet;
 import java.io.File;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -57,7 +57,6 @@ import org.junit.Test;
 
 public class CxxLinkTest {
 
-  private static final Linker DEFAULT_LINKER = new GnuLinker(new HashedFileTool(Paths.get("ld")));
   private static final Path DEFAULT_OUTPUT = Paths.get("test.exe");
   private static final ImmutableList<Arg> DEFAULT_ARGS =
       ImmutableList.of(
@@ -71,6 +70,10 @@ public class CxxLinkTest {
           StringArg.of("/System/Libraries/libz.dynlib"),
           StringArg.of("-llibz.dylib"));
 
+  private final ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
+  private final Linker DEFAULT_LINKER =
+      new GnuLinker(new HashedFileTool(PathSourcePath.of(projectFilesystem, Paths.get("ld"))));
+
   @Test
   public void testThatInputChangesCauseRuleKeyChanges() {
     SourcePathRuleFinder ruleFinder =
@@ -80,7 +83,6 @@ public class CxxLinkTest {
     SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
-    BuildRuleParams params = TestBuildRuleParams.create();
     FakeFileHashCache hashCache =
         FakeFileHashCache.createFromStrings(
             ImmutableMap.of(
@@ -98,9 +100,10 @@ public class CxxLinkTest {
                 new CxxLink(
                     target,
                     projectFilesystem,
-                    params,
+                    ImmutableSortedSet::of,
                     DEFAULT_LINKER,
                     DEFAULT_OUTPUT,
+                    ImmutableMap.of(),
                     DEFAULT_ARGS,
                     Optional.empty(),
                     Optional.empty(),
@@ -115,9 +118,12 @@ public class CxxLinkTest {
                 new CxxLink(
                     target,
                     projectFilesystem,
-                    params,
-                    new GnuLinker(new HashedFileTool(Paths.get("different"))),
+                    ImmutableSortedSet::of,
+                    new GnuLinker(
+                        new HashedFileTool(
+                            PathSourcePath.of(projectFilesystem, Paths.get("different")))),
                     DEFAULT_OUTPUT,
+                    ImmutableMap.of(),
                     DEFAULT_ARGS,
                     Optional.empty(),
                     Optional.empty(),
@@ -133,9 +139,10 @@ public class CxxLinkTest {
                 new CxxLink(
                     target,
                     projectFilesystem,
-                    params,
+                    ImmutableSortedSet::of,
                     DEFAULT_LINKER,
                     Paths.get("different"),
+                    ImmutableMap.of(),
                     DEFAULT_ARGS,
                     Optional.empty(),
                     Optional.empty(),
@@ -151,9 +158,10 @@ public class CxxLinkTest {
                 new CxxLink(
                     target,
                     projectFilesystem,
-                    params,
+                    ImmutableSortedSet::of,
                     DEFAULT_LINKER,
                     DEFAULT_OUTPUT,
+                    ImmutableMap.of(),
                     ImmutableList.of(SourcePathArg.of(FakeSourcePath.of("different"))),
                     Optional.empty(),
                     Optional.empty(),
@@ -171,7 +179,6 @@ public class CxxLinkTest {
     SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
-    BuildRuleParams params = TestBuildRuleParams.create();
     DefaultRuleKeyFactory ruleKeyFactory =
         new TestDefaultRuleKeyFactory(
             FakeFileHashCache.createFromStrings(
@@ -209,9 +216,10 @@ public class CxxLinkTest {
             new CxxLink(
                 target,
                 projectFilesystem,
-                params,
+                ImmutableSortedSet::of,
                 DEFAULT_LINKER,
                 DEFAULT_OUTPUT,
+                ImmutableMap.of(),
                 args1,
                 Optional.empty(),
                 Optional.empty(),
@@ -229,9 +237,10 @@ public class CxxLinkTest {
             new CxxLink(
                 target,
                 projectFilesystem,
-                params,
+                ImmutableSortedSet::of,
                 DEFAULT_LINKER,
                 DEFAULT_OUTPUT,
+                ImmutableMap.of(),
                 args2,
                 Optional.empty(),
                 Optional.empty(),
