@@ -73,21 +73,14 @@ public class JavacSpecTest {
   }
 
   @Test
-  public void returnsOutOfProcJavacIfRequested() {
-    specBuilder.setJavacLocation(Javac.Location.OUT_OF_PROCESS);
-    Javac javac = getJavac();
-
-    assertTrue(javac instanceof OutOfProcessJdkProvidedInMemoryJavac);
-  }
-
-  @Test
   public void returnsExternalCompilerIfJavacPathPresent() throws IOException {
-    SourcePath javacPath = FakeSourcePath.of("path/to/javac");
+    Path externalPath = Paths.get("/foo/bar/path/to/javac");
+    SourcePath javacPath = FakeSourcePath.of(externalPath);
 
     specBuilder.setJavacPath(Either.ofRight(javacPath));
     ExternalJavac javac = (ExternalJavac) getJavac();
-
-    assertThat(javac.getInputs(), Matchers.contains(javacPath));
+    assertTrue(javac.getActualPath().isLeft());
+    assertEquals(externalPath, javac.getActualPath().getLeft());
   }
 
   @Test
@@ -99,7 +92,8 @@ public class JavacSpecTest {
     specBuilder.setCompiler(either);
     ExternalJavac javac = (ExternalJavac) getJavac();
 
-    assertThat(javac.getInputs(), Matchers.contains(sourcePath));
+    assertTrue(javac.getActualPath().isLeft());
+    assertEquals(externalJavac, javac.getActualPath().getLeft());
   }
 
   @Test
@@ -111,7 +105,8 @@ public class JavacSpecTest {
     specBuilder.setCompiler(either).setJavacPath(Either.ofLeft(Paths.get("does-not-exist")));
     ExternalJavac javac = (ExternalJavac) getJavac();
 
-    assertThat(javac.getInputs(), Matchers.contains(sourcePath));
+    assertTrue(javac.getActualPath().isLeft());
+    assertEquals(externalJavacPath, javac.getActualPath().getLeft());
   }
 
   @Test
@@ -155,16 +150,6 @@ public class JavacSpecTest {
     JarBackedJavac javac = (JarBackedJavac) getJavac();
 
     assertThat(javac.getInputs(), Matchers.contains(prebuiltJar.getSourcePathToOutput()));
-  }
-
-  @Test
-  public void returnsOutOfProcessJarBackedJavacIfRequested() throws IOException {
-    SourcePath javacJarPath = FakeSourcePath.of("path/to/javac.jar");
-
-    specBuilder.setJavacJarPath(javacJarPath).setJavacLocation(Javac.Location.OUT_OF_PROCESS);
-    OutOfProcessJarBackedJavac javac = (OutOfProcessJarBackedJavac) getJavac();
-
-    assertThat(javac.getInputs(), Matchers.contains(javacJarPath));
   }
 
   @Test
